--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -29,9 +29,21 @@
     <div class="clearhidden"> </div>
     
     </div>
+    
+    <div class="section-nopad">
+      <div class="section-content">
+        <form method="get" action="{% url googlesearch_index %}">
+         <p style="text-align:center">
+           {{ search_form.query }}
+           <input type="submit" value="Search"/>
+         </p>
+        </form>
+      </div>
+    </div>
 
     <div class="list-section">
         <ul class="ml">
+              
 {#            <li><a href="/help/">Using this site</a></li>#}
 {#            <li><a href="/customise/">Customise this page</a></li>#}
 {#            <li><a href="{% url core_update_location %}">Location-finding preferences</a></li> #}
@@ -42,7 +54,8 @@
     </div>
     
     <div class="section-nopad">
-        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="Mobile Oxford" style="float:right;"/>
+        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="Oxford of Oxford" style="float:right;"/>
+        <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services" style="float:right;"/>
     </div>
 <!--
     <div class="section">
