--- a/mobile_portal/mobile_portal/templates/z3950/item_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/z3950/item_detail.xhtml
@@ -64,7 +64,7 @@
 
 {% if libraries %}
 <div class="list-section">
-    <h2 class="section-header">Library holdings</h2>
+    <h2 class="section-header">Library holdings{% if map_hash %} by proximity{% endif %}</h2>
     <div class="list-note"><div class="bubble">
         Please note that all libraries have admission and borrowing policies; inclusion in this list does not imply access.{% if map_hash %} Closest results are not necessarily best.{% endif %}
     </div></div> 
@@ -76,9 +76,9 @@
     <ul class="ml">
 {% for library, books in libraries %}
 {% if library.oxpoints_id %}
-        <li><a href="{{ library.oxpoints_entity.get_absolute_url }}">{{ library.location|join:" - " }}</a></li>
+        <li><a href="{{ library.oxpoints_entity.get_absolute_url }}">{% if map_hash %}{{ library.marker_number }}. {% endif %}{{ library.location|join:" - " }}</a></li>
 {% else %}
-        <li class="non-link-item">{{ library.location|join:" - " }}</li>
+        <li class="non-link-item">{% if map_hash %}{{ library.marker_number }}. {% endif %}{{ library.location|join:" - " }}</li>
 {% endif %}
 {% ifequal books|length 1 %}
     <li class="subitem non-link-item">
