Better search for maps Removed lots of debugging 'print' statements. Static signature checking in tests for View objects. General tidying.

--- a/mobile_portal/mobile_portal/templates/googlesearch/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/googlesearch/index.xhtml
@@ -16,6 +16,7 @@
         {{ search_form.query }}
         <input type="submit" value="Go!"/>
       </p>
+      <!--<p>{{ search_form.application }}</p>-->
     </div>
   </form>
 </div>
