--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -191,6 +191,7 @@
       <p>With thanks to the following for providing data:</p>
       <ul>
         <li><a href="http://backstage.bbc.co.uk/">BBC</a></li>
+		<li><a href="http://dft.gov.uk">Department for Transport</a></li>
         <li><a href="http://www.oxfordshire.gov.uk">Oxfordshire County Council</a></li>
         <li><a href="http://wiki.openstreetmap.org/">OpenStreetMap</a></li>
         <li><a href="http://www.ouls.ox.ac.uk/">Oxford University Library Services</a></li>
