--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -192,6 +192,7 @@
       <ul>
         <li><a href="http://backstage.bbc.co.uk/">BBC</a></li>
 		<li><a href="http://dft.gov.uk">Department for Transport</a></li>
+		<li><a href="http://www.oxontime.com">ACIS - OxonTime</a></li>
         <li><a href="http://www.oxfordshire.gov.uk">Oxfordshire County Council</a></li>
         <li><a href="http://wiki.openstreetmap.org/">OpenStreetMap</a></li>
         <li><a href="http://www.ouls.ox.ac.uk/">Oxford University Library Services</a></li>
