--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -71,7 +71,6 @@
         </p>
       </li>
       
-<!-- A taste of something still to come!
       <li class="feature-z3950">
         <img src="{{ MEDIA_URL }}png/demos/z3950.png" width="160" height="160" class="odd" />
         <h3>Library search</h3>
@@ -82,9 +81,9 @@
           maps to guide you to the library.
         </p>
       </li>
--->
+
       <li class="feature-maps">
-        <img src="{{ MEDIA_URL }}png/demos/maps.png" width="160" height="160" class="odd" />
+        <img src="{{ MEDIA_URL }}png/demos/maps.png" width="160" height="160" class="even" />
         <h3>Maps</h3>
         <p>
           Search for colleges, departments, restaurants, bus stops and much
@@ -95,7 +94,7 @@
       </li>
 
       <li class="feature-podcasts">
-        <img src="{{ MEDIA_URL }}png/demos/podcasts.png" width="160" height="160" class="even" />
+        <img src="{{ MEDIA_URL }}png/demos/podcasts.png" width="160" height="160" class="odd" />
         <h3>Podcasts</h3>
         <p>
           Listen to any podcast published through the University's
@@ -104,7 +103,7 @@
       </li>
       
       <li class="feature-webcams">
-        <img src="{{ MEDIA_URL }}png/demos/webcams.png" width="160" height="160" class="odd" />
+        <img src="{{ MEDIA_URL }}png/demos/webcams.png" width="160" height="160" class="even" />
         <h3>Webcams</h3>
         <p>
           View webcams from across the city. Check the weather, the traffic, or simply wave at yourself.
@@ -112,7 +111,7 @@
       </li>
     
       <li class="feature-news">
-        <img src="{{ MEDIA_URL }}png/demos/news.png" width="160" height="160" class="even" />
+        <img src="{{ MEDIA_URL }}png/demos/news.png" width="160" height="160" class="odd" />
         <h3>News</h3>
         <p>
           Read news from across the University to find out about events and recent developments.
@@ -120,7 +119,7 @@
       </li>
     
       <li class="feature-results">
-        <img src="{{ MEDIA_URL }}png/demos/results.png" width="160" height="160" class="odd" />
+        <img src="{{ MEDIA_URL }}png/demos/results.png" width="160" height="160" class="even" />
         <h3>Results releases</h3>
         <p>
           Check whether your examination school has had its results released so you know when to check the Student Self-Service System.
@@ -128,7 +127,7 @@
       </li>
     
       <li class="feature-weather">
-        <img src="{{ MEDIA_URL }}png/demos/weather.png" width="160" height="160" class="even" />
+        <img src="{{ MEDIA_URL }}png/demos/weather.png" width="160" height="160" class="odd" />
         <h3>Weather</h3>
         <p>
           Check the latest weather reports from Oxford.
