Improved bus stop features. Desktop about hiding preference now settable (albeit not from the UI)

--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -144,6 +144,13 @@
     
       <p><a id="preview-link" href="{% url core_index %}?preview=true">Preview</a>
          the site using the browser on your desktop or laptop.</p>
+         
+      <!--<p>
+        <form method="post" action="{% url core_index %}">
+          <input type="hidden" name="no_desktop_about" value="true"/>
+          <input type="submit" value="Skip this about page in future."/>
+        </form>
+      </p>-->
     </div>
     
     <div class="access">
@@ -156,7 +163,7 @@
         </li>
         <li>
           <a href="http://www.oucs.ox.ac.uk/network/wireless/">
-            Instructions for setting up wireless access from your wireless device
+            Instructions for setting up wireless access from your mobile device
           </a>
         </li>
       </ul>
@@ -189,16 +196,16 @@
       </div>
       <p>With thanks to the following for providing data:</p>
       <ul>
+        <li><a href="http://www.oxontime.com">ACIS - OxonTime</a></li>
         <li><a href="http://backstage.bbc.co.uk/">BBC</a></li>
 		<li><a href="http://dft.gov.uk">Department for Transport</a></li>
-		<li><a href="http://www.oxontime.com">ACIS - OxonTime</a></li>
-        <li><a href="http://www.oxfordshire.gov.uk">Oxfordshire County Council</a></li>
+        <li><a href="http://www.earth.ox.ac.uk/">Earth Sciences Department</a></li>
+		<li><a href="http://www.admin.ox.ac.uk/schools/">Examination Schools</a></li>
         <li><a href="http://wiki.openstreetmap.org/">OpenStreetMap</a></li>
+        <li><a href="http://oii.ox.ac.uk/">Oxford Internet Institute</a></li>
+        <li><a href="http://www.oxfordshire.gov.uk">Oxfordshire County Council</a></li>
         <li><a href="http://www.ouls.ox.ac.uk/">Oxford University Library Services</a></li>
         <li><a href="http://podcasts.ox.ac.uk/">University of Oxford Podcasts</a></li>
-        <li><a href="http://www.admin.ox.ac.uk/schools/">Examination Schools</a></li>
-        <li><a href="http://oii.ox.ac.uk/">Oxford Internet Institute</a></li>
-        <li><a href="http://www.earth.ox.ac.uk/">Earth Sciences Department</a></li>
       </ul>
     </div></div>
    
