--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -52,7 +52,7 @@
     
     <div class="about">
         <em>Mobile Oxford</em> is a new service run for students and staff at the
-        University of Oxford. Incorporating information and access to services
+        University of Oxford as well as the general public. Incorporating information and access to services
         from across the institution, <em>Mobile Oxford</em> is a central place
         to act as your guide in both the city and the University.
     </div>    
