--- a/mobile_portal/mobile_portal/templates/static/about.xhtml
+++ b/mobile_portal/mobile_portal/templates/static/about.xhtml
@@ -23,6 +23,7 @@
             <dt>Oxontime</dt>
 			<dt>Oxfordshire County Council</dt>
 			<dt>Stagecoach, Oxford Bus Company &amp; Thames Travel</dt>
+			<dt>BBC</dt>
             <dt>Edina</dt>
             <dt>OpenStreetMap and Contributors</dt>
             <dt>Oxford University Estates Department</dt>
