--- a/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -126,10 +126,10 @@
 <div class="list-section">
 <h2 class="section-header">Emergency contacts</h2>
 <ul class="ml">
-    <li><a class="phone" href="tel:112">Emergency services</a></li>
-    <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)</small></a></li>
-    <li><a class="phone" href="tel:+441865272944">University security <small>(enquiries)</small></a></li>
-    <li><a class="phone" href="tel:+448458505505">Thames Valley Police <small>(non-emergency)</small></a></li>
+    <li><a class="phone" href="tel:112">Emergency services</a><br /><small>112</small></li>
+    <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)<br /> +44 1865 289999</small></a></li>
+    <li><a class="phone" href="tel:+441865272944">University security <small>(enquiries)<br /> +44 1865 272944</small></a></li>
+    <li><a class="phone" href="tel:+448458505505">Thames Valley Police <small>(non-emergency)<br /> +44 8458 505505</small></a></li>
 </ul>
 </div>
 
