added the rest of the phone numbers to the quick contacts list

--- a/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -117,9 +117,9 @@
 <div class="list-section">
 <h2 class="section-header">University contacts</h2>
 <ul class="ml">
-    <li><a class="phone" href="tel:+441865270000">General enquiries</a></li>
-    <li><a class="phone" href="tel:+441865280000">Switchboard</a></li>
-    <li><a class="phone" href="tel:+441865273200">Computing Services help desk</a></li>
+    <li><a class="phone" href="tel:+441865270000">General enquiries<br /><small>+44 1865 270000</small></a></li>
+    <li><a class="phone" href="tel:+441865280000">Switchboard<br /><small>+44 1865 280000</small></a></li>
+    <li><a class="phone" href="tel:+441865273200">Computing Services help desk<br /><small>+44 1865 273200</small></a></li>
 </ul>
 </div>
 
@@ -136,11 +136,11 @@
 <div class="list-section">
 <h2 class="section-header">Health and welfare</h2>
 <ul class="ml">
-    <li><a class="phone" href="tel:+448454647">NHS Direct</a></li>
-    <li><a class="phone" href="tel:+441865270300">Counselling Service</a></li>
-    <li><a class="phone" href="tel:+441865270270">Oxford Nightline</a></li>
-    <li><a class="phone" href="tel:+441865726295">Rape Crisis</a></li>
-    <li><a class="phone" href="tel:+448457909090">Samaritans</a></li>
+    <li><a class="phone" href="tel:+448454647">NHS Direct<br /><small>+44 8454 647</small></a></li>
+    <li><a class="phone" href="tel:+441865270300">Counselling Service<br /><small>+44 1865 270300</small></a></li>
+    <li><a class="phone" href="tel:+441865270270">Oxford Nightline<br /><small>+44 1865 270270</small></a></li>
+    <li><a class="phone" href="tel:+441865726295">Rape Crisis<br /><small>+44 1865 726295</small></a></li>
+    <li><a class="phone" href="tel:+448457909090">Samaritans<br /><small>+44 8457 909090</small></a></li>
 </ul>
 </div>
   
