updated quick contacts list

--- a/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -117,9 +117,9 @@
 <div class="list-section">
 <h2 class="section-header">University contacts</h2>
 <ul class="ml">
-    <li><a class="phone" href="tel:+441865270000">General enquiries<br /><small>+44 1865 270000</small></a></li>
-    <li><a class="phone" href="tel:+441865280000">Switchboard<br /><small>+44 1865 280000</small></a></li>
-    <li><a class="phone" href="tel:+441865273200">Computing Services help desk<br /><small>+44 1865 273200</small></a></li>
+    <li><a class="phone" href="tel:+441865270000">General enquiries<br /><small>01865 (2)70000</small></a></li>
+    <li><a class="phone" href="tel:+441865280000">Switchboard<br /><small>01865 (2)80000</small></a></li>
+    <li><a class="phone" href="tel:+441865273200">Computing Services help desk<br /><small>01865 (2)73200</small></a></li>
 </ul>
 </div>
 
@@ -127,20 +127,20 @@
 <h2 class="section-header">Emergency contacts</h2>
 <ul class="ml">
     <li><a class="phone" href="tel:112">Emergency services<br /><small>112</small></a></li>
-    <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)<br /> +44 1865 289999</small></a></li>
-    <li><a class="phone" href="tel:+441865272944">University security <small>(enquiries)<br /> +44 1865 272944</small></a></li>
-    <li><a class="phone" href="tel:+448458505505">Thames Valley Police <small>(non-emergency)<br /> +44 8458 505505</small></a></li>
+    <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)<br />01865 (2)89999</small></a></li>
+    <li><a class="phone" href="tel:+441865272944">University security <small>(enquiries)<br />01865 (2)72944</small></a></li>
+    <li><a class="phone" href="tel:+448458505505">Thames Valley Police <small>(non-emergency)<br />08458 505505</small></a></li>
 </ul>
 </div>
 
 <div class="list-section">
 <h2 class="section-header">Health and welfare</h2>
 <ul class="ml">
-    <li><a class="phone" href="tel:+448454647">NHS Direct<br /><small>+44 8454 647</small></a></li>
-    <li><a class="phone" href="tel:+441865270300">Counselling Service<br /><small>+44 1865 270300</small></a></li>
-    <li><a class="phone" href="tel:+441865270270">Oxford Nightline<br /><small>+44 1865 270270</small></a></li>
-    <li><a class="phone" href="tel:+441865726295">Rape Crisis<br /><small>+44 1865 726295</small></a></li>
-    <li><a class="phone" href="tel:+448457909090">Samaritans<br /><small>+44 8457 909090</small></a></li>
+    <li><a class="phone" href="tel:+448454647">NHS Direct<br /><small>0845 46 47</small></a></li>
+    <li><a class="phone" href="tel:+441865270300">Counselling Service<br /><small>01865 (2)70300</small></a></li>
+    <li><a class="phone" href="tel:+441865270270">Oxford Nightline<br /><small>01865 (2)70270</small></a></li>
+    <li><a class="phone" href="tel:+441865726295">Rape Crisis<br /><small>01865 726295</small></a></li>
+    <li><a class="phone" href="tel:+448457909090">Samaritans<br /><small>08457 90 90 90</small></a></li>
 </ul>
 </div>
   
