Feedback form updating

--- a/mobile_portal/mobile_portal/site-media/css/base.css
+++ b/mobile_portal/mobile_portal/site-media/css/base.css
@@ -166,7 +166,13 @@ div.osm-license {
     color: #000000;
 }
 
+dl.feedback dd, dl.feedback dl{
+    margin-left:0;
+}
 
+dl.feedback input, dl.feedback textarea {
+    width:99%;
+}
 
 /*
 
