--- a/mobile_portal/mobile_portal/site-media/css/classes/touch.css
+++ b/mobile_portal/mobile_portal/site-media/css/classes/touch.css
@@ -140,8 +140,9 @@ ul.ml li.notbottom {
 }
 
 div.front-section, div.section, div.section-nopad {
+    text-align:center;
     margin:10px;
-    padding:8px;
+    padding:4px;
     border-radius:8px;
     -moz-border-radius:8px;
     -webkit-border-radius:8px;
