--- a/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
@@ -6,18 +6,18 @@ ol.icon-menu {
 }
 
 ol.icon-menu li {
+    display:inline-block;
     margin-left:0px;
     margin-top:0px;
     background-repeat:no-repeat;
     background-position:center 10px;
     overflow:hidden;
-    float:left;
 }
 
 ol.icon-menu li a {
     width:60px;
     height:2em;
-    padding:5px;
+    padding:4px;
     padding-top:75px;
     text-align:center;
     display:block;
