Addded feedback link to bottom

--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -48,6 +48,7 @@
 {#            <li><a href="/customise/">Customise this page</a></li>#}
 {#            <li><a href="{% url core_update_location %}">Location-finding preferences</a></li> #}
             <li class="top"><a href="{% url core_static_about %}">About this site</a></li>
+            <li><a href="{% url core_contact %}?referer={% url core_index %}">Provide feedback</a></li>
 {#            <li><a href="/legal/">Legal</a></li>#}
 
         </ul>
