Added feedback link to desktop_about, and reworded a couple of bits.

--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -53,7 +53,7 @@
     <div class="about">
         <em>Mobile Oxford</em> is a new service run for students and staff at the
         University of Oxford as well as the general public. Incorporating information and access to services
-        from across the institution, <em>Mobile Oxford</em> is a central place
+        from across the institution, <em>Mobile Oxford</em> is a central point
         to act as your guide in both the city and the University.
     </div>    
     
@@ -154,9 +154,9 @@
     </div>
     
     <div class="access">
-      <h2>How to access</h2>
+      <h2>Accessing the site</h2>
       <ul>
-        <li>Open up your phone's web browser and head to: <a href="http://m.ox.ac.uk/">m.ox.ac.uk</a></li>
+        <li>Open your phone's web browser and head to: <a href="http://m.ox.ac.uk/">m.ox.ac.uk</a></li>
         <li id="access-qrcode">
             Point your phone's barcode scanner at:
             <img src="{{ MEDIA_URL }}png/barcodes/qrcode.png" alt="QR Barcode for m.ox.ac.uk" height="189" width="189"/>
@@ -174,6 +174,16 @@
 	    <p>While this service is provided free of charge, your mobile operator
 	       may charge for the data you transfer. Please check that using this
 	       site does not incur any unexpected charges before accessing it.</p>
+	</div>
+	
+	<div class="data-usage">
+	    <h2>Have feedback?</h2>
+	    <p><em>Mobile Oxford</em> is a rapidly developing service, and we'd
+	       like to know what you think. If you have any comments, suggestions
+	       or feature requests you can e-mail us at
+	       <a href="mailto:mobileoxford@oucs.ox.ac.uk">mobileoxford@oucs.ox.ac.uk</a>.
+	       Additionally, if you have any data source you'd like to see
+	       included, get in touch and we'll see what we can do.</p>
 	</div>
 	</div>
     
