--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -157,10 +157,15 @@
       <h2>Accessing the site</h2>
       <ul>
         <li>Open your phone's web browser and head to: <a href="http://m.ox.ac.uk/">m.ox.ac.uk</a></li>
+		<li>Point your phone's barcode scanner at:</li>
         <li id="access-qrcode">
-            Point your phone's barcode scanner at:
             <img src="{{ MEDIA_URL }}png/barcodes/qrcode.png" alt="QR Barcode for m.ox.ac.uk" height="189" width="189"/>
+			QR Code
         </li>
+		<li id="access-datamatrix">
+			<img src="{{ MEDIA_URL }}png/barcodes/datamatrix.png" alt="DataMatrix Barcode for m.ox.ac.uk" height="189" width="189"/>
+			Datamatrix Code
+		</li>
         <li>
           <a href="http://www.oucs.ox.ac.uk/network/wireless/">
             Instructions for setting up wireless access from your mobile device
