Added other ways of checking out m.ox onto side bar

--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -192,7 +192,13 @@
 	</div>
 	</div>
     
-    
+    <div class="data-usage">
+		<h2>Find us on</h2>
+		<ul>
+			<li><a href="http://m.ox.ac.uk/blog" title="Blog - Mobile Oxford">Our Blog</a></li>
+			<li><a href="http://www.facebook.com/pages/Mobile-Oxford/133576996628" title="Facebook - Mobile Oxford">Facebook</a></li>
+			<li><a href="http://twitter.com/mobileox" title="Twitter - Mobile Oxford">Twitter</a></li>
+		</ul>
     </div>
 
     <div class="footer">
