--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -192,7 +192,7 @@
 	</div>
 	</div>
     
-    <div class="data-usage">
+    <div class="access">
 		<h2>Find us on</h2>
 		<ul>
 			<li><a href="http://m.ox.ac.uk/blog" title="Blog - Mobile Oxford">Our Blog</a></li>
