--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -228,6 +228,8 @@
         <li><a href="http://www.ouls.ox.ac.uk/">Oxford University Library Services</a></li>
         <li><a href="http://podcasts.ox.ac.uk/">University of Oxford Podcasts</a></li>
       </ul>
+
+	  <p>Feel free to contact us on <a href="mailto:mobileoxford@oucs.ox.ac.uk">mobileoxford@oucs.ox.ac.uk</a> with any problems, suggestions, comments etc!</p>
     </div></div>
    
   </body>
