Corrected name of St Antony's news feed. Added explanation to last modified date in RSS item list.

--- a/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
@@ -20,7 +20,7 @@
         <li>
             <a href="{{ item.get_absolute_url }}">
                 {{ item.title }}<br/>
-                <small>{{ item.last_modified_local|date:"d M Y H:m:s" }}</small>
+                <small>Item updated: <em>{{ item.last_modified_local|date:"D j M Y \a\t H:m" }}</em></small>
             </a>
         </li>
 {% endfor %}
