--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -81,7 +81,8 @@
 
 {% if not hide_feedback_link %}
     <div class="front-section">
-        <a href="{% url core_contact %}?referer={{ path }}">Provide feedback for this page.</a>
+        <a href="{% url core_contact %}?referer={{ path }}">Provide feedback for this page.</a><br />
+		<a href="http://chart.apis.google.com/chart?cht=qr&chs={{ device.max_image_width }}x{{ device.max_image_width }}&chl=http://m.ox.ac.uk{{ path }}">2D Barcode for this page</a>
     </div>
 {% endif %}
 
