Many changes:  * Bus stops AJAXification  * Now OSM entities are disambiguated with road names when they share a name=||operator= with another OSM entity  * Beginnings of an OSM update form  * Entities may now belong multiple EntityTypes  * Can query to find Entities belonging any set of EntityTypes  * OSM Entities now have tel: links for phone= tags  * maps/nearby/ and maps/category/ restructured to group similar EntityTypes  * Banks, libraries, bars, theatres and cinemas now added to list of amenities taken from OSM  * Fixed bug where update_location redirected incorrectly when one starts at library/ on non-AJAX devices  * Added a 'feedback feedback' model and view, to let us push messages at particular sessions  * Tidied up the entity_without_location and require_location templates

--- a/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/base.xhtml
@@ -76,13 +76,22 @@
 {% endif %}
 
     <div class="content">
+
+{% if unread_user_messages %}    
+    <div class="front-section">
+      <a href="{% url core_messages %}" style="font-size:1.2em; padding:1em 0.2em; display:block;">
+        You have a message from the developers!
+      </a>
+    </div>
+{% endif %}
+
 {% block content %}
 {% endblock %}
 
 {% if not hide_feedback_link %}
     <div class="front-section">
         <a href="{% url core_contact %}?referer={{ path }}">Provide feedback for this page.</a><br />
-		<a href="http://chart.apis.google.com/chart?cht=qr&chs={{ device.max_image_width }}x{{ device.max_image_width }}&chl=http://m.ox.ac.uk{{ path }}">2D Barcode for this page</a>
+		<a href="http://chart.apis.google.com/chart?cht=qr&amp;chs={{ device.max_image_width }}x{{ device.max_image_width }}&amp;chl=http://m.ox.ac.uk{{ path }}">2D Barcode for this page</a>
     </div>
 {% endif %}
 
