--- a/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -38,7 +38,7 @@
   <form method="get" action="{% url maps_busstop_search %}">
     <h2 class="section-header">Bus stop search</h2>
     <div class="list-note"><div class="bubble"><label for="busstop_id">
-        Enter an 8-digit oxontime code, or a central stop number (e.g. 'F3')
+        Enter an 8-digit oxontime code, or a central stop number (e.g. 'G3')
     </label></div></div>
     
     <div class="section-content">
