--- a/mobile_portal/mobile_portal/templates/core/require_location.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/require_location.xhtml
@@ -1,9 +1,16 @@
 {% extends "base.xhtml" %}
 
+{% block title %}m.ox | Location required{% endblock %}
+{% block pagetitle %}Location required{% endblock %}
+
 {% block content %}
 
-<h1>Location required</h1>
+<div class="list-section">
+  <h2 class="section-header">Location required</h2>
 
-<p>To be able to use this feature you need to <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">choose a location</a>.</p>
+  <div class="list-note"><div class="bubble">
+    To be able to use this feature you need to <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">choose a location</a>.
+  </div></div>
+</div>
 
 {% endblock %}
