--- a/mobile_portal/mobile_portal/templates/core/update_location_confirm.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/update_location_confirm.xhtml
@@ -18,7 +18,7 @@
             <input type="hidden" name="latitude" value="{{ option.1.0 }}"/>
             <input type="hidden" name="longitude" value="{{ option.1.1 }}"/>
             <input type="hidden" name="accuracy" value="{{ option.2 }}"/>
-            <input type="hidden" name="return_url" value="{{ return_url }}"/>
+            <input type="hidden" name="return_url" value="{{ return_url|default:"" }}"/>
             <button class="as_link" type="submit" name="index" style="width:100%">{{ forloop.counter }}. {{ option.0 }}</button>
         </form>
     </li>
