--- a/mobile_portal/mobile_portal/templates/maps/category_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/category_list.xhtml
@@ -13,10 +13,22 @@
 {% block content %}
 
 <div class="list-section">
+  <h2 class="section-header">Public</h2>
 
 <ul class="ml">
-{% for entity_type in entity_types %}
-    <li{% if forloop.first %} class="top"{% endif %}><a href="{% url maps_category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
+{% for entity_type in public %}
+    <li><a href="{% url maps_category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
+{% endfor %}
+</ul>
+
+</div>
+
+<div class="list-section">
+  <h2 class="section-header">University of Oxford</h2>
+
+<ul class="ml">
+{% for entity_type in university %}
+    <li><a href="{% url maps_category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
 {% endfor %}
 </ul>
 
