Added new icons for off-site-links. Reincluded run_commands view. Prettified OSM tag renderings.

--- a/mobile_portal/mobile_portal/templates/core/run_command.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/run_command.xhtml
@@ -1,8 +1,10 @@
 {% extends "core/base.xhtml" %}
 
+{% block pagetitle %}Run administrative commands{% endblock %}
+{% block title %}m.ox | Run administrative commands{% endblock %}
+
 {% block content %}
 
-<h1>Run administrative commands</h1>
 
 {% for command,details in commands.items %}
 
