--- a/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
@@ -27,11 +27,8 @@
     </p>
     
     <p style="margin-top:0.5em;">
-      Your contribution will be made to OpenStreetMap (OSM) under a Creative Commons
-      Attribution-Share Alike 2.0 license (CC-BY-SA), which gives anyone
-      permission to share or modify your changes so long as they attribute you
-      and any published changes are made available under the same or similar
-      license.
+      Your contribution will be released into the Public Domain, and then
+      submitted to OpenStreetMap by Mobile Oxford.
     </p>
     
     <p style="margin-top:0.5em;">
@@ -47,7 +44,10 @@
       any changes you provide.
     </p>
     
-
+    <p style="margin-top:0.5em;">
+      You may be interested to read <a href="{% url maps_static_openstreetmap %}">further information about
+      OpenStreetMap and other ways in which one may contribute</a>.
+    </p>
   </div>
 </div>
 
