--- a/mobile_portal/mobile_portal/site-media/css/classes/touch.css
+++ b/mobile_portal/mobile_portal/site-media/css/classes/touch.css
@@ -77,6 +77,14 @@ ul.ml .email {
     background-image:url('../../png/icons/list-email.png');
 }
 
+ul.ml .external {
+    background-image:url('../../png/icons/list-external.png');
+}
+
+ul.ml .external-mobile {
+    background-image:url('../../png/icons/list-external-mobile.png');
+}
+
 ul.ml span.audio {
     background-image:url('../../png/icons/list-audio.png');
 }
@@ -162,12 +170,18 @@ div.list-section, div.section-nopad {
 
 div.section-content {
     padding:8px;
-    /*background-color:#ffffff;
-    color:#000000;*/
+    background-color:#ffffff;
+    color:#000000;
+    text-align:left;
 }
 
 div.section-content a {
-    color: #ffffff;
+    color: #0000ff;
+}
+
+div.section-content p {
+    margin-bottom:0.5em;
+    
 }
 
 h2.section-header, h3.section-header, div.list-footer {
