--- a/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/desktop_about.xhtml
@@ -229,7 +229,7 @@
         <li><a href="http://podcasts.ox.ac.uk/">University of Oxford Podcasts</a></li>
       </ul>
 
-	  <p>Contact us on <a href="mailto:mobileoxford@oucs.ox.ac.uk">mobileoxford@oucs.ox.ac.uk</a> with any problems, suggestions, comments etc!</p>
+	  <p>Contact us at <a href="mailto:mobileoxford@oucs.ox.ac.uk">mobileoxford@oucs.ox.ac.uk</a> should you have any problems, suggestions, or comments.</p>
     </div></div>
    
   </body>
