--- a/mobile_portal/mobile_portal/templates/maps/map_elements.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/map_elements.xhtml
@@ -10,4 +10,4 @@
         </a>
     {% endifnotequal %}
 {% endif %}
-    <div class="osm-license">Map &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a></div>
+    <div class="osm-license">Map &copy; <a href="{% url maps_static_openstreetmap %}">OpenStreetMap</a> and contributors, CC-BY-SA</div>
