--- a/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
@@ -1,5 +1,5 @@
 {% extends "maps/base.xhtml" %}
-{% load maps %}{% load osm_tags %}
+{% load maps %}{% load osm_tags %}{% load portal_misc %}
 
 {% block breadcrumbs %}
 {{ block.super }}
@@ -35,6 +35,28 @@
 {% endif %}
 
 <ul class="ml">
+{% if entity.metadata.tags.phone %}
+    <li>
+        <a class="phone" href="{{ entity.metadata.tags.phone|telephone_uri }}">
+            Call <em>{{ entity.title }}</em><br/>
+            <small>{{ entity.metadata.tags.phone|telephone:"nolink" }}</small>
+        </a>
+    </li>
+{% endif %}
+{% if entity.metadata.tags.wikipedia %}
+    <li>
+        <a class="external-mobile" href="{{ entity.metadata.tags.wikipedia|osm_tag_wikipedia_uri|urlencode }}">
+            Wikipedia article
+        </a>
+    </li>
+{% endif %}
+{% if entity.metadata.tags.url %}
+    <li>
+        <a class="external" href="{{ entity.metadata.tags.url|urlencode }}">
+            Website
+        </a>
+    </li>
+{% endif %}
     <li>
         <a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
     </li>
@@ -42,15 +64,23 @@
 
 </div>
 
-<div class="section-nopad">
+<div class="list-section">
 <h2 class="section-header">Note</h2>
 
 <div class="list-note bottom">
     This information is provided courtesy of
-    <a href="http://www.openstreetmap.org/">OpenStreetMap</a> under a
-    <a href="http://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0</a> license.<br/>
+    <a href="{% url maps_static_openstreetmap %}">OpenStreetMap</a> under a
+    Creative Commons Attribution-ShareAlike 2.0 license.<br/>
     Oxford University provides this information without warranty.
 </div>
+
+<ul class="ml">
+  <li>
+    <a href="{% url maps_entity_update entity.entity_type.slug,entity.display_id %}">
+      Suggest a correction
+    </a>
+  </li>
+</ul>
 
 </div>
 
