--- a/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -38,9 +38,9 @@
         Please note that these links are not optimised for mobile devices.
     </div></div>
     <ul class="ml">
-        <li><a href="http://www.ouls.ox.ac.uk/">OULS <small>(Oxford University Library Services)</small></a></li>
-        <li><a href="http://solo.ouls.ox.ac.uk/">SOLO <small>(Search Oxford Libraries Online)</small></a></li>
-        <li><a href="http://library.ox.ac.uk/">OLIS <small>(Oxford Library Information System)</small></a></li>
+        <li><a class="external" href="http://www.ouls.ox.ac.uk/">OULS <small>(Oxford University Library Services)</small></a></li>
+        <li><a class="external" href="http://solo.ouls.ox.ac.uk/">SOLO <small>(Search Oxford Libraries Online)</small></a></li>
+        <li><a class="external" href="http://library.ox.ac.uk/">OLIS <small>(Oxford Library Information System)</small></a></li>
     </ul>
 </div>
 
